// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Labels render correctly with data should render badges with More labels link 1`] = `
<div
  className="kiali_f1ldck1g"
>
  <div
    data-test="app-label-container"
    key="label_div_0"
  >
    <Label
      key="label_0"
      name="app"
      value="bookinfo"
    />
  </div>
  <div
    data-test="version-label-container"
    key="label_div_1"
  >
    <Label
      key="label_1"
      name="version"
      value="v1"
    />
  </div>
  <Button
    className="kiali_fw8qhul"
    data-test="label_more"
    key="label_more"
    onClick={[Function]}
    variant="link"
  >
    More 
    labels
    ...
  </Button>
</div>
`;

exports[`#Labels render correctly with data should render badges without More labels link 1`] = `
<div
  className="kiali_f1ldck1g"
>
  <div
    data-test="app-label-container"
    key="label_div_0"
  >
    <Label
      key="label_0"
      name="app"
      value="bookinfo"
    />
  </div>
  <div
    data-test="version-label-container"
    key="label_div_1"
  >
    <Label
      key="label_1"
      name="version"
      value="v1"
    />
  </div>
</div>
`;
